新增switch组件样式。优惠其他样式。

--- a/src/styles/components/index.less
+++ b/src/styles/components/index.less
@@ -1,8 +1,9 @@
 @import './button.less';
-@import './dialog.less';
-@import './index.less';
+@import './view.less';
 @import './loading.less';
 @import './toast.less';
+@import './dialog.less';
 @import './radio.less';
 @import './checkbox.less';
-@import './view.less';
+@import './switch.less';
+
