--- a/src/styles/themes-modules/mixin.less
+++ b/src/styles/themes-modules/mixin.less
@@ -1,5 +1,10 @@
-// .mixin-test {} 输出
-// .mixin-test() {} 不输出
-.mixin-placeholder() {
-  color: @c-03;
+// 占位符颜色
+.placeholder() {
+  color: @c-04
+}
+
+// 占位符颜色
+.fonts-icon(@fonts-icon-content) {
+  font-family: "iconfont";
+  content: @fonts-icon-content;
 }
