新增消息提示 tips 组件UI

--- a/src/styles/themes-modules/index.less
+++ b/src/styles/themes-modules/index.less
@@ -4,15 +4,17 @@
 /**** padding, margin 边距值  end **************************************************/
 
 /**** 明确值 *******************************************************/
+
 @c-success: @c-52; //成功
 @c-warn: @c-53; //告警
 @c-error: @c-54; //失败
+@c-info: @c-55;  //消息
 
 @bg-primary: @c-51;
-@bg-info: @c-55;
 @bg-success: @c-52;
 @bg-warn: @c-53;
 @bg-error: @c-54;
+@bg-info: @c-55;
 
 @bg-body: @c-09;
 @bg-model: @c-10;
