--- a/src/styles/common/fonts.less
+++ b/src/styles/common/fonts.less
@@ -10,20 +10,19 @@
   font-style: normal;
 }
 
+
 [class^="fy-icon-"],
 [class*=" fy-icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: "iconfont" !important;
+  font-family: "iconfont";
   speak: none;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
   line-height: 1;
-
-  /* Better Font Rendering =========== */
+  vertical-align: baseline;
+  display: inline-block;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 @ui-icon: ~"@{ui}-icon";
