--- a/src/styles/components/tips.less
+++ b/src/styles/components/tips.less
@@ -24,16 +24,16 @@
     background-color: fade(@bg-error, 20%);
   }
 
-  & &-content {
-    padding: 0 px2rem(8);
-  }
+  // & &-content {
+  // }
 
   & &-icon {
     font-size: px2rem(32);
+    margin-right: px2rem(20);
   }
 
-  & &-title {
-  }
+  // & &-title {
+  // }
 
   & &-desc {
     padding-top: px2rem(5);
